creditas-sf/force-app/main/default/objects/CommunicationContacts__c/CommunicationContacts__c.object-meta.xml
<CustomObject>
    <label>CommunicationContact</label>
    <nameField>
        <label>Communication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CommunicationContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>