creditas-sf/force-app/main/default/objects/CommunicationContacts__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Contato</label>
    <length>150</length>
    <type>Text</type>
</CustomField>