creditas-sf/force-app/main/default/objects/CommunicationContacts__c/fields/Contact_Key__c.field-meta.xml
<CustomField>
    <fullName>Contact_Key__c</fullName>
    <label>Contact Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>