creditas-sf/force-app/main/default/objects/CommunicationContacts__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>