creditas-sf/force-app/main/default/objects/CommunicationContacts__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo de contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PERSONAL</fullName>
                <label>Pessoal</label>
            </value>
            <value>
                <fullName>COMERCIAL</fullName>
                <label>Profissional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>