creditas-sf/force-app/main/default/objects/CommunicationContacts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExternalId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>